--- a/src/components/item-group-title/styles.css
+++ b/src/components/item-group-title/styles.css
@@ -15,13 +15,5 @@
 }
 
 .item-group_title button {
-    background: none;
-    border: none;
-    outline: none;
-    padding: 12px 12px;
-    cursor: pointer;
-}
-
-.item-group_title button:hover {
-    background-color: var(--white-glass);
+    font-size: 1.5rem;
 }
